--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 layout: default
 ---
-<h1>¡Bienvenidos a nuestro proyecto!</h1>
+
+<h1  style="color:blue">¡Bienvenidos a nuestro proyecto!</h1>
+
